--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="PT-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,10 +38,10 @@
                     <h2 class="profile-title">Olá, meu nome é Fulana de Tal e construo páginas web</h2>
                     <p>Eu sou formada em lorem ipsum sit amet consectetur e atualmente estou participando no projeto Oracle ONE na Alura.</p>
                     <ul class="profile-network">
-                        <li class="profile"><a href="">Github <img src="assets\arrow.png"> </a></li>
-                        <li class="profile"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
-                        <li class="profile"><a href="">Instagram <img src="assets\arrow.png"></a></li>
-                        <li class="profile"><a href="">Curriculo <img src="assets\arrow.png"></a></li>
+                        <li class="profile-network-item"><a href="">Github <img src="assets\arrow.png"> </a></li>
+                        <li class="profile-network-item"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
+                        <li class="profile-network-item"><a href="">Instagram <img src="assets\arrow.png"></a></li>
+                        <li class="profile-network-item"><a href="">Curriculo <img src="assets\arrow.png"></a></li>
                     </ul>
                 </div> 
             </section>
@@ -254,7 +254,5 @@
                 <p>2022</p>
             </div>
         </section>
-    
-    <script src="validate.js"></script>
 </body>
 </html>
