criado e estilizado about.css

--- a/index.html
+++ b/index.html
@@ -47,12 +47,9 @@
             </section>
     
             <section class="about">
-                <div class="about-container">
-                    <h3 class="section-about">Sobre mim</h3>
-                    <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. </p>
-                    <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
-                    <img src="assets\signature.png">
-                </div>
+                <h3 class="about-title">Sobre mim</h3>
+                <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. </p>
+                <img src="assets\signature.png">
             </section>
     
             <section class="skills">
