criados e agregados estilos em education.css

--- a/index.html
+++ b/index.html
@@ -146,29 +146,23 @@
                 </div>
             </section>
     
-            <section class="academic">
-                <h2 class="section-title" id="formacao">Formação acadêmica</h2>
-                <div class="courses">
-                    <div class="courses-box">
-                        <ul class="course-list">
-                            <li class="course-img"><img src="assets\ufpr_logo.png"></li>
-                            <li class="course-title"><h4>Análise de dados</h4></li>
-                            <li class="course-subtitle"><p>2018 - UFPR</p></li>
-                        </ul>
+            <section class="education">
+                <h2 class="education-title">Formação acadêmica</h2>
+                <div class="education-courses">
+                    <div class="education-course-card">
+                        <img src="assets\ufpr_logo.png">
+                        <h4>Análise de dados</h4>
+                        <span>2018 - UFPR</span>
                     </div>
-                    <div class="courses-box">
-                        <ul class="course-list">
-                            <li class="course-img"><img src="assets\alura_logo.png"></li>
-                            <li class="course-title"><h4>Formação ux Design</h4></li>
-                            <li class="course-subtitle"><p>2019 - Alura</p></li>
-                        </ul>
+                    <div class="education-course-card">
+                        <img src="assets\alura_logo.png">
+                        <h4>Formação ux Design</h4>
+                        <span>2019 - Alura</span>
                     </div>
-                    <div class="courses-box">
-                        <ul class="course-list">
-                            <li class="course-img"><img src="assets\ufrj_logo.png"></li>
-                            <li class="course-title"><h4>Pós-graduação design</h4></li>
-                            <li class="course-subtitle"><p>Em andamento - UFRJ</p></li>
-                        </ul>
+                    <div class="education-course-card">
+                        <img src="assets\ufrj_logo.png">
+                        <h4>Pós-graduação design</h4>
+                        <span>Em andamento - UFRJ</span>
                     </div>
                 </div>
             </section>
