agregado e estilizados estilos do footer

--- a/index.html
+++ b/index.html
@@ -224,11 +224,9 @@
             </div>
         </section>
 
-        <section class="footer">
-            <div class="rodape">
-                <p>Desarrollado por Fulana de Tal</p>
-                <p>2022</p>
-            </div>
-        </section>
+        <footer>
+            <p>Desarrollado por Aluno Alura de Tal</p>
+            <p>&copy; 2022</p>
+        </footer>
 </body>
 </html>
